[package]
name = "runkv-client"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-stream = "0.3.3"
async-trait = "0.1"
bincode = "1.3.3"
runkv-common = { path = "../common" }
runkv-proto = { path = "../proto" }
thiserror = "1.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
] }
tonic = "0.6.2"
tracing = "0.1"
